--- a/.env.citeup
+++ b/.env.citeup
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=CiteUP
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:91Qp6nLa7gDJzo1+wt6kjOfE4sMhlCLbmPPoBxIssE4=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=CiteUP
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,12 +22,15 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=muhammaddetaaditya@gmail.com
+MAIL_PASSWORD=whidoxouyqbinmrg
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+CLIENT_ID=1
+CLIENT_SECRET=2qfbnSLxmt0fsaH9PG9tZdlfumc114E6I4HApSnT
