Completed phase 1 alerts feature.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
   "/js/app.js": "/js/app.js",
   "/css/app.css": "/css/app.css",
   "/js/front.js": "/js/front.js",
-  "/js/dashboard.js": "/js/dashboard.js"
+  "/js/dashboard.js": "/js/dashboard.js",
+  "/mix.js": "/mix.js"
 }
