--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "axios": "^0.15.3",
     "axios-retry": "^2.0.1",
     "bootstrap-sass": "^3.3.7",
+    "bootstrap-vue": "^0.18.0",
     "cropperjs": "^1.0.0-rc.3",
     "cross-env": "^3.2.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "quill": "^1.3.0",
+    "tinymce": "^4.6.4",
     "vue": "^2.1.10",
     "vue-router": "^2.7.0",
     "vuex": "^2.3.1"
