--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "axios": "^0.15.3",
     "axios-retry": "^2.0.1",
     "bootstrap-sass": "^3.3.7",
-    "bootstrap-vue": "^0.18.0",
+    "bootstrap-switch": "^3.3.4",
     "cropperjs": "^1.0.0-rc.3",
     "cross-env": "^3.2.3",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
