--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "quill": "^1.3.0",
     "tinymce": "^4.6.4",
     "vue": "^2.1.10",
     "vue-router": "^2.7.0",
+    "vue-wysiwyg": "^1.2.1",
+    "vue2-google-maps": "^0.7.10",
+    "vuedraggable": "^2.14.1",
     "vuex": "^2.3.1"
   }
 }
