--- a/.env.citeup
+++ b/.env.citeup
@@ -1,7 +1,7 @@
-APP_NAME=CiteUP
+APP_NAME="CITE UP"
 APP_ENV=local
 APP_KEY=base64:91Qp6nLa7gDJzo1+wt6kjOfE4sMhlCLbmPPoBxIssE4=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
@@ -24,8 +24,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=muhammaddetaaditya@gmail.com
-MAIL_PASSWORD=whidoxouyqbinmrg
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
@@ -33,4 +33,4 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
 CLIENT_ID=1
-CLIENT_SECRET=2qfbnSLxmt0fsaH9PG9tZdlfumc114E6I4HApSnT
+CLIENT_SECRET=
