Made api routes cacheable

--- a/.env.citeup
+++ b/.env.citeup
@@ -1,7 +1,7 @@
 APP_NAME="CITE UP"
 APP_ENV=local
 APP_KEY=base64:91Qp6nLa7gDJzo1+wt6kjOfE4sMhlCLbmPPoBxIssE4=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
