--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
   "/css/app.css": "/css/app.css",
   "/js/front.js": "/js/front.js",
   "/js/dashboard.js": "/js/dashboard.js",
-  "/mix.js": "/mix.js"
+  "/mix.js": "/mix.js",
+  "/js/elim.js": "/js/elim.js"
 }
